# pixi-inspect

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
src/: main.rs
tests/: cli.rs
