[package]
name = "pixi-inspect"
version = "0.1.0" # VERSION_PLACEHOLDER
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tar = "0.4"
flate2 = "1.0"
anyhow = "1.0"
walkdir = "2.3"
tokio = { version = "1.0", features = ["full"] }
tempfile = "3.8"
zip = "0.6"
zstd = "0.13"
bzip2 = "0.4"
rattler_package_streaming = "0.23.9"
assert_cmd = "2.0.17"
predicates = "3.1.3"

[[bin]]
name = "pixi-inspect"
path = "src/main.rs"
