[package]
name = "pixi-inspect"
version = "1.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
tempfile = "3.8"
rattler_package_streaming = "0.23.9"
rattler_conda_types = "0.40.1"

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"

[[bin]]
name = "pixi-inspect"
path = "src/main.rs"

[profile.release-min-size]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
strip = true
